FIX: Show footer on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1068,6 +1068,7 @@ body main {
 
   body {
     padding: 0;
+    min-height: 93vh
   }
 
   .headingPrimaryTitle {
